--- a/JenkinsFile
+++ b/JenkinsFile
@@ -26,5 +26,11 @@ pipeline {
                 '''
             }
         }
+
+        stage('Test'){
+            steps{
+                echo 'Test stage'
+            }
+        }
     }
 }
