added jenkins file

--- a/JenkinsFile
+++ b/JenkinsFile
@@ -30,6 +30,7 @@ pipeline {
         stage('Test'){
             steps{
                 echo 'Test stage'
+                echo 'test -f build/index.html'
             }
         }
     }
