added jenkins file

--- a/JenkinsFile
+++ b/JenkinsFile
@@ -28,10 +28,18 @@ pipeline {
         }
 
         stage('Test'){
+            agent{
+                docker{
+                    image 'node:18-alpine'
+                    reuseNode true
+                }
+            }
+            
             steps{
                 sh '''
-                Test stage
-                test -f build/index.html
+                    Test stage
+                    test -f build/index.html
+                    npm test
                 '''
             }
         }
