--- a/JenkinsFile
+++ b/JenkinsFile
@@ -37,7 +37,7 @@ pipeline {
             
             steps{
                 sh '''
-                    Test stage
+                    test stage
                     npm test
                 '''
             }
