--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,31 +1,31 @@
 pipeline {
     agent any
 
-    // stages {
-    //     stage('Hello') {
-    //         steps {
-    //             echo 'Hello World'
-    //         }
-    //     }
+    stages {
+        stage('Hello') {
+            steps {
+                echo 'Hello World'
+            }
+        }
 
-    //      stage('Build') {
-    //         agent{
-    //             docker{
-    //                 image 'node:18-alpine'
-    //                 reuseNode true
-    //             }
-    //         }
-    //         steps {
-    //             sh '''
-    //                 ls -la
-    //                 node --version
-    //                 npm --version
-    //                 npm ci
-    //                 npm run build
-    //                 ls -la
-    //             '''
-    //         }
-    //     }
+         stage('Build') {
+            agent{
+                docker{
+                    image 'node:18-alpine'
+                    reuseNode true
+                }
+            }
+            steps {
+                sh '''
+                    ls -la
+                    node --version
+                    npm --version
+                    npm ci
+                    npm run build
+                    ls -la
+                '''
+            }
+        }
 
         stage('Test'){
             agent{
@@ -44,4 +44,4 @@ pipeline {
             }
         }
     }
-// }
+}
