--- a/JenkinsFile
+++ b/JenkinsFile
@@ -53,7 +53,7 @@ pipeline {
             }
             steps {
                 sh '''
-                    npm install netlify-cli -g
+                    npm install netlify-cli
                     netlify --version
                 '''
             }
