--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,6 +1,10 @@
 pipeline {
     agent any
 
+    environment{
+        NETLIFY_SITE_ID = 'ab9e9cf5-70b3-4a2a-b44e-23fa399d8a99'
+    }
+
     stages {
         stage('Hello') {
             steps {
@@ -55,6 +59,7 @@ pipeline {
                 sh '''
                     npm install netlify-cli
                     node_modules/.bin/netlify --version
+                    echo "Deploying to site id: $NETLIFY_SITE_ID"
                 '''
             }
         }
