--- a/JenkinsFile
+++ b/JenkinsFile
@@ -2,9 +2,30 @@ pipeline {
     agent any
 
     stages {
-        stage('Hello') {
-            steps {
-                echo 'Hello World'
+        // stage('Hello') {
+        //     steps {
+        //         echo 'Hello World'
+        //     }
+        // }
+
+        stage('Build')
+        {
+            agent{
+                docker
+                {
+                    image 'node:18-alpine'
+                    reuseNode true
+                }
+            }
+            steps{
+                sh '''
+                    ls -la
+                    node --version
+                    npm --version
+                    npm ci
+                    npm run build
+                    ls -la
+                '''
             }
         }
     }
