Added test stage

--- a/JenkinsFile
+++ b/JenkinsFile
@@ -28,5 +28,12 @@ pipeline {
                 '''
             }
         }
+
+        stage('Test')
+        {
+            steps{
+                echo "Test stage"
+            }
+        }
     }
 }
