--- a/JenkinsFile
+++ b/JenkinsFile
@@ -32,7 +32,11 @@ pipeline {
         stage('Test')
         {
             steps{
-                echo "Test stage"
+                sh '''
+                    Test stage
+                    test -f build/index.html
+                    npm test
+                    '''
             }
         }
     }
