Added test stage

--- a/JenkinsFile
+++ b/JenkinsFile
@@ -32,8 +32,11 @@ pipeline {
         stage('Test')
         {
             agent{
-                docker 'node:18-alpine'
-                reuseNode true
+                docker 
+                {
+                    image 'node:18-alpine'
+                    reuseNode true
+                }
             }
             steps{
                 sh '''
