added a post action

--- a/JenkinsFile
+++ b/JenkinsFile
@@ -46,5 +46,13 @@ pipeline {
                     '''
             }
         }
+
+        post
+        {
+            always
+            {
+                junit 'test-results/junit.xml'
+            }
+        }
     }
 }
