--- a/JenkinsFile
+++ b/JenkinsFile
@@ -8,26 +8,34 @@ pipeline {
         //     }
         // }
 
-        stage('Build')
-        {
-            agent{
-                docker
-                {
-                    image 'node:18-alpine'
-                    reuseNode true
-                }
-            }
-            steps{
-                sh '''
-                    ls -la
-                    node --version
-                    npm --version
-                    npm ci
-                    npm run build
-                    ls -la
-                '''
-            }
-        }
+
+        //this is a comment
+
+        /*
+        line1
+        line2
+        */
+
+        // stage('Build')
+        // {
+        //     agent{
+        //         docker
+        //         {
+        //             image 'node:18-alpine'
+        //             reuseNode true
+        //         }
+        //     }
+        //     steps{
+        //         sh '''
+        //             ls -la
+        //             node --version
+        //             npm --version
+        //             npm ci
+        //             npm run build
+        //             ls -la
+        //         '''
+        //     }
+        // }
 
         stage('Test')
         {
@@ -41,7 +49,7 @@ pipeline {
             steps{
                 sh '''
                     test stage
-                    test -f build/index.html
+                    #test -f build/index.html
                     npm test
                     '''
             }
