--- a/JenkinsFile
+++ b/JenkinsFile
@@ -57,6 +57,24 @@ pipeline {
             }
         }
 
+        stage('E2E')
+        {
+            agent{
+                docker 
+                {
+                    image 'docker pull mcr.microsoft.com/playwright:v1.52.0-noble'
+                    reuseNode true
+                }
+            }
+            steps{
+                sh '''
+                   npm install -g serve
+                   serve -s build
+                   npx playwright test
+                    '''
+            }
+        }
+
     }
 
       post
