--- a/JenkinsFile
+++ b/JenkinsFile
@@ -62,7 +62,7 @@ pipeline {
             agent{
                 docker 
                 {
-                    image 'dmcr.microsoft.com/playwright:v1.39.0-jammy'
+                    image 'mcr.microsoft.com/playwright:v1.52.0-noble'
                     reuseNode true
                 }
             }
