--- a/JenkinsFile
+++ b/JenkinsFile
@@ -68,7 +68,7 @@ pipeline {
             }
             steps{
                 sh '''
-                   npm install -g serve
+                   npm install serve
                    node_modules/.bin/serve -s build
                    npx playwright test
                    '''
