--- a/JenkinsFile
+++ b/JenkinsFile
@@ -82,7 +82,7 @@ pipeline {
         {
             always
             {
-                junit 'test-results/junit.xml'
+                junit 'jest-results/junit.xml'
             }
         }
 }
