--- a/JenkinsFile
+++ b/JenkinsFile
@@ -83,6 +83,7 @@ pipeline {
             always
             {
                 junit 'jest-results/junit.xml'
+                publishHTML([allowMissing: false, alwaysLinkToLastBuild: false, icon: '', keepAll: false, reportDir: 'playwright-report', reportFiles: 'index.html', reportName: 'PlayWright HTML Report', reportTitles: '', useWrapperFileDirectly: true])
             }
         }
 }
