added jenkins file

--- a/JenkinsFile
+++ b/JenkinsFile
@@ -82,7 +82,7 @@ pipeline {
       {
         parallel
         {
-            stage('Test')
+            stage('Unit Tests')
             {
                 agent{
                     docker 
@@ -97,6 +97,12 @@ pipeline {
                         #test -f build/index.html
                         npm test
                         '''
+                }
+                post
+                {
+                    always
+                    {
+                        junit 'jest-results/junit.xml'
                 }
             }
 
@@ -117,18 +123,25 @@ pipeline {
                         npx playwright test --reporter=html
                         '''
                 }
+                post
+                {
+                    always
+                    {
+                        publishHTML([allowMissing: false, alwaysLinkToLastBuild: false, icon: '', keepAll: false, reportDir: 'playwright-report', reportFiles: 'index.html', reportName: 'PlayWright HTML Report', reportTitles: '', useWrapperFileDirectly: true])
+                    }
+                }
             }
 
         }
         }
     }
 
-      post
-        {
-            always
-            {
-                junit 'jest-results/junit.xml'
-                publishHTML([allowMissing: false, alwaysLinkToLastBuild: false, icon: '', keepAll: false, reportDir: 'playwright-report', reportFiles: 'index.html', reportName: 'PlayWright HTML Report', reportTitles: '', useWrapperFileDirectly: true])
-            }
-        }
+    //   post
+    //     {
+    //         always
+    //         {
+    //             junit 'jest-results/junit.xml'
+    //             publishHTML([allowMissing: false, alwaysLinkToLastBuild: false, icon: '', keepAll: false, reportDir: 'playwright-report', reportFiles: 'index.html', reportName: 'PlayWright HTML Report', reportTitles: '', useWrapperFileDirectly: true])
+    //         }
+    //     }
 }
