added jenkins file

--- a/JenkinsFile
+++ b/JenkinsFile
@@ -39,41 +39,83 @@ pipeline {
         }
         */
 
-        stage('Test')
-        {
-            agent{
-                docker 
-                {
-                    image 'node:18-alpine'
-                    reuseNode true
-                }
-            }
-            steps{
-                sh '''
-                    test stage
-                    #test -f build/index.html
-                    npm test
-                    '''
-            }
-        }
+        // stage('Test')
+        // {
+        //     agent{
+        //         docker 
+        //         {
+        //             image 'node:18-alpine'
+        //             reuseNode true
+        //         }
+        //     }
+        //     steps{
+        //         sh '''
+        //             test stage
+        //             #test -f build/index.html
+        //             npm test
+        //             '''
+        //     }
+        // }
 
-        stage('E2E')
-        {
-            agent{
-                docker 
+        // stage('E2E')
+        // {
+        //     agent{
+        //         docker 
+        //         {
+        //             image 'mcr.microsoft.com/playwright:v1.39.0-jammy'
+        //             reuseNode true
+        //         }
+        //     }
+        //     steps{
+        //         sh '''
+        //            npm install serve
+        //            node_modules/.bin/serve -s build &
+        //            sleep 10
+        //            npx playwright test --reporter=html
+        //            '''
+        //     }
+        // }
+
+        stage("Tests"){
+            parallel {
+                stage('Unit Test')
                 {
-                    image 'mcr.microsoft.com/playwright:v1.39.0-jammy'
-                    reuseNode true
+                    agent{
+                        docker 
+                        {
+                            image 'node:18-alpine'
+                            reuseNode true
+                        }
+                    }
+                    steps{
+                        sh '''
+                            test stage
+                            #test -f build/index.html
+                            npm test
+                            '''
+                    }
+                }
+
+                stage('E2E')
+                {
+                    agent{
+                        docker 
+                        {
+                            image 'mcr.microsoft.com/playwright:v1.39.0-jammy'
+                            reuseNode true
+                        }
+                    }
+                    steps{
+                        sh '''
+                        npm install serve
+                        node_modules/.bin/serve -s build &
+                        sleep 10
+                        npx playwright test --reporter=html
+                        '''
+                    }
                 }
             }
-            steps{
-                sh '''
-                   npm install serve
-                   node_modules/.bin/serve -s build &
-                   sleep 10
-                   npx playwright test --reporter=html
-                   '''
-            }
+            
         }
 
     }
