added jenkins file

--- a/JenkinsFile
+++ b/JenkinsFile
@@ -94,6 +94,11 @@ pipeline {
                             npm test
                             '''
                     }
+                    post{
+                        always
+                        {
+                            junit 'jest-results/junit.xml'
+                        }
                 }
 
                 stage('E2E')
@@ -113,6 +118,12 @@ pipeline {
                         npx playwright test --reporter=html
                         '''
                     }
+                    post{
+                        always
+                        {
+                            publishHTML([allowMissing: false, alwaysLinkToLastBuild: false, icon: '', keepAll: false, reportDir: 'playwright-report', reportFiles: 'index.html', reportName: 'PlayWright HTML Report', reportTitles: '', useWrapperFileDirectly: true])
+                        }
+                        }
                 }
             }
 
@@ -120,12 +131,12 @@ pipeline {
 
     }
 
-    post
-    {
-        always
-        {
-            junit 'jest-results/junit.xml'
-            publishHTML([allowMissing: false, alwaysLinkToLastBuild: false, icon: '', keepAll: false, reportDir: 'playwright-report', reportFiles: 'index.html', reportName: 'PlayWright HTML Report', reportTitles: '', useWrapperFileDirectly: true])
-        }
-    }
+    // post
+    // {
+    //     always
+    //     {
+    //         junit 'jest-results/junit.xml'
+    //         publishHTML([allowMissing: false, alwaysLinkToLastBuild: false, icon: '', keepAll: false, reportDir: 'playwright-report', reportFiles: 'index.html', reportName: 'PlayWright HTML Report', reportTitles: '', useWrapperFileDirectly: true])
+    //     }
+    // }
 }
