--- a/JenkinsFile
+++ b/JenkinsFile
@@ -127,7 +127,26 @@ pipeline {
                 }
             }
         }
+
+        stage('Deploy')
+        {
+            agent{
+                docker 
+                {
+                    image 'node:18-alpine'
+                    reuseNode true
+                }
+            }
+            steps{
+                sh '''
+                    deploy stage
+                    npm install netlify-cli -g
+                    netlify --version
+                    '''
+            }
+        }
     }
+
 }
 
     // post
