added jenkins file

--- a/JenkinsFile
+++ b/JenkinsFile
@@ -128,7 +128,7 @@ pipeline {
             }
         }
 
-        stage('Deploy')
+        stage('Deploys')
         {
             agent{
                 docker 
