--- a/JenkinsFile
+++ b/JenkinsFile
@@ -140,7 +140,8 @@ pipeline {
             steps{
                 sh '''
                     echo "deploy stage"
-                    npm install netlify-cli
+                    #npm install netlify-cli
+                    npm install netlify-cli@20.1.1
                     node_modules/.bin/netlify --version
                     '''
             }
