--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,6 +1,10 @@
 pipeline {
     agent any
 
+    environment
+    {
+        NETLIFY_SITE_ID='dd4e9d15-e74e-4c5e-a45a-da5f9a024f29'
+    }
     stages {
         // stage('Hello') {
         //     steps {
@@ -143,6 +147,7 @@ pipeline {
                     #npm install netlify-cli
                     npm install netlify-cli@20.1.1
                     node_modules/.bin/netlify --version
+                    echo "Deploying to site id: $NETLIFY_SITE_ID"
                     '''
             }
         }
