--- a/JenkinsFile
+++ b/JenkinsFile
@@ -4,6 +4,7 @@ pipeline {
     environment
     {
         NETLIFY_SITE_ID='dd4e9d15-e74e-4c5e-a45a-da5f9a024f29'
+        NETLIFY_AUTH_TOKEN=credentials['netlify-token']
     }
     stages {
         // stage('Hello') {
@@ -148,6 +149,7 @@ pipeline {
                     npm install netlify-cli@20.1.1
                     node_modules/.bin/netlify --version
                     echo "Deploying to site id: $NETLIFY_SITE_ID"
+                    node_modules/.bin/netlify status
                     '''
             }
         }
