added jenkins file

--- a/JenkinsFile
+++ b/JenkinsFile
@@ -155,6 +155,28 @@ pipeline {
                     '''
             }
         }
+
+        stage(' Prod E2E')
+        {
+            agent{
+                docker 
+                {
+                    image 'mcr.microsoft.com/playwright:v1.39.0-jammy'
+                    reuseNode true
+                }
+            }
+
+            environment
+                {
+                   process.env.CI_ENVIRONMENT_URL = 'https://fanciful-empanada-c7edc2.netlify.app'
+                }
+
+            steps{
+                sh '''
+                   npx playwright test --reporter=html
+                   '''
+            }
+        }
     }
 
 }
