--- a/JenkinsFile
+++ b/JenkinsFile
@@ -61,24 +61,34 @@ pipeline {
         //     }
         // }
 
-        // stage('E2E')
-        // {
-        //     agent{
-        //         docker 
-        //         {
-        //             image 'mcr.microsoft.com/playwright:v1.39.0-jammy'
-        //             reuseNode true
-        //         }
-        //     }
-        //     steps{
-        //         sh '''
-        //            npm install serve
-        //            node_modules/.bin/serve -s build &
-        //            sleep 10
-        //            npx playwright test --reporter=html
-        //            '''
-        //     }
-        // }
+        stage('E2E')
+        {
+            agent{
+                docker 
+                {
+                    image 'mcr.microsoft.com/playwright:v1.39.0-jammy'
+                    reuseNode true
+                }
+            }
+            steps{
+                sh '''
+                   npm install serve
+                   node_modules/.bin/serve -s build &
+                   sleep 10
+                   npx playwright test --reporter=html
+                   '''
+            }
+        }
+
+          post
+        {
+            always
+            {
+                junit 'jest-results/junit.xml'
+                publishHTML([allowMissing: false, alwaysLinkToLastBuild: false, icon: '', keepAll: false, reportDir: 'playwright-report', reportFiles: 'index.html', reportName: 'PlayWright Local', reportTitles: '', useWrapperFileDirectly: true])
+            }
+        }
+}
 
         stage("Tests"){
             parallel {
@@ -176,17 +186,25 @@ pipeline {
                    npx playwright test --reporter=html
                    '''
             }
+
+            post
+            {
+                always
+                {
+                    junit 'jest-results/junit.xml'
+                    publishHTML([allowMissing: false, alwaysLinkToLastBuild: false, icon: '', keepAll: false, reportDir: 'playwright-report', reportFiles: 'index.html', reportName: 'PlayWright E2E', reportTitles: '', useWrapperFileDirectly: true])
+                }
+            }
         }
-    }
 
-}
+        }
 
-    // post
-    // {
-    //     always
-    //     {
-    //         junit 'jest-results/junit.xml'
-    //         publishHTML([allowMissing: false, alwaysLinkToLastBuild: false, icon: '', keepAll: false, reportDir: 'playwright-report', reportFiles: 'index.html', reportName: 'PlayWright HTML Report', reportTitles: '', useWrapperFileDirectly: true])
-    //     }
-    // }
+//     post
+//     {
+//         always
+//         {
+//             junit 'jest-results/junit.xml'
+//             publishHTML([allowMissing: false, alwaysLinkToLastBuild: false, icon: '', keepAll: false, reportDir: 'playwright-report', reportFiles: 'index.html', reportName: 'PlayWright HTML Report', reportTitles: '', useWrapperFileDirectly: true])
+//         }
+//     }
 // }
