added jenkins file

--- a/JenkinsFile
+++ b/JenkinsFile
@@ -273,7 +273,10 @@ pipeline {
                             npm install serve
                             node_modules/.bin/serve -s build &
                             sleep 10
-                            npx playwright test  --reporter=html
+                            #npx playwright test  --reporter=html
+                            npx playwright test --reporter=html
+                            mv playwright-report $WORKSPACE/playwright-report
+                            ls -la $WORKSPACE/playwright-report
                         '''
                     }
 
@@ -318,7 +321,10 @@ pipeline {
 
             steps {
                 sh '''
-                    npx playwright test  --reporter=html
+                    #npx playwright test  --reporter=html
+                    npx playwright test --reporter=html
+                    mv playwright-report $WORKSPACE/playwright-report
+                    ls -la $WORKSPACE/playwright-report
                 '''
             }
 
