added jenkins file

--- a/JenkinsFile
+++ b/JenkinsFile
@@ -274,9 +274,10 @@ pipeline {
                             node_modules/.bin/serve -s build &
                             sleep 10
                             #npx playwright test  --reporter=html
+                            rm -rf $WORKSPACE/playwright-report
                             npx playwright test --reporter=html
-                            mv playwright-report $WORKSPACE/playwright-report
-                            ls -la $WORKSPACE/playwright-report
+                            mv playwright-report $WORKSPACE/
+
                         '''
                     }
 
@@ -322,9 +323,10 @@ pipeline {
             steps {
                 sh '''
                     #npx playwright test  --reporter=html
+                    rm -rf $WORKSPACE/playwright-report
                     npx playwright test --reporter=html
-                    mv playwright-report $WORKSPACE/playwright-report
-                    ls -la $WORKSPACE/playwright-report
+                    mv playwright-report $WORKSPACE/
+
                 '''
             }
 
