--- a/JenkinsFile
+++ b/JenkinsFile
@@ -276,7 +276,7 @@ pipeline {
                             #npx playwright test  --reporter=html
                             rm -rf $WORKSPACE/playwright-report
                             npx playwright test --reporter=html
-                            mv playwright-report $WORKSPACE/
+                            ls -la playwright-report
 
                         '''
                     }
@@ -325,7 +325,7 @@ pipeline {
                     #npx playwright test  --reporter=html
                     rm -rf $WORKSPACE/playwright-report
                     npx playwright test --reporter=html
-                    mv playwright-report $WORKSPACE/
+                    ls -la playwright-report
 
                 '''
             }
