added jenkins file

--- a/JenkinsFile
+++ b/JenkinsFile
@@ -274,7 +274,7 @@ pipeline {
                             node_modules/.bin/serve -s build &
                             sleep 10
                             #npx playwright test  --reporter=html
-                            rm -rf $WORKSPACE/playwright-report
+                            rm -rf playwright-report
                             npx playwright test --reporter=html
                             ls -la playwright-report
 
@@ -323,7 +323,7 @@ pipeline {
             steps {
                 sh '''
                     #npx playwright test  --reporter=html
-                    rm -rf $WORKSPACE/playwright-report
+                    rm -rf playwright-report
                     npx playwright test --reporter=html
                     ls -la playwright-report
 
